// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorStep should display error details 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="ErrorStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Transaction Error
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-error-banner-dark-green.svg
    </svg>
    <div
      class="space-y-6"
    >
      <p
        class="text-theme-secondary-text"
      >
        An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
      </p>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 iJpvqJ py-4"
        disabled=""
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <textarea
            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full resize-none text-theme-secondary-text"
            data-testid="ErrorStep__errorMessage"
            disabled=""
            style="height: 4px;"
          >
            Display error details
          </textarea>
        </div>
      </div>
    </div>
    <div
      class="flex justify-between"
    >
      <div>
        <div
          class="relative"
        >
          <button
            class="ClipboardButton__StyledButton-sc-cammp1-0 bAhMDA"
            data-testid="clipboard-button__wrapper"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="sc-bdvvtL fCrhkg"
                height="16"
                width="16"
              >
                <svg>
                  copy.svg
                </svg>
              </div>
              <span>
                Copy
              </span>
            </div>
          </button>
        </div>
      </div>
      <div
        class="flex space-x-3"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep should emit onBack 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="ErrorStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Custom error title
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-error-banner-dark-green.svg
    </svg>
    <div
      class="space-y-6"
    >
      <p
        class="text-theme-secondary-text"
      >
        An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
      </p>
    </div>
    <div
      class="flex justify-between"
    >
      <div />
      <div
        class="flex space-x-3"
      >
        <button
          class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk"
          data-testid="ErrorStep__wallet-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Back to Wallet
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep should emit onRepeat 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="ErrorStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Custom error title
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-error-banner-dark-green.svg
    </svg>
    <div
      class="space-y-6"
    >
      <p
        class="text-theme-secondary-text"
      >
        An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
      </p>
    </div>
    <div
      class="flex justify-between"
    >
      <div />
      <div
        class="flex space-x-3"
      >
        <button
          class="OriginalButton__StyledButton-sc-o0fs2j-0 isLyLB"
          data-testid="ErrorStep__repeat-button"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            Retry
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep should render with custom title 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="ErrorStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Custom error title
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-error-banner-dark-green.svg
    </svg>
    <div
      class="space-y-6"
    >
      <p
        class="text-theme-secondary-text"
      >
        An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
      </p>
    </div>
    <div
      class="flex justify-between"
    >
      <div />
      <div
        class="flex space-x-3"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep should render with default texts 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="ErrorStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Transaction Error
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-error-banner-dark-green.svg
    </svg>
    <div
      class="space-y-6"
    >
      <p
        class="text-theme-secondary-text"
      >
        An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
      </p>
    </div>
    <div
      class="flex justify-between"
    >
      <div />
      <div
        class="flex space-x-3"
      />
    </div>
  </div>
</DocumentFragment>
`;
